tests/diagnostics/catalog/snapshots/ir/IR0063.snap
error[IR0063]: IR_E_UNKNOWN_TYPE
 --> tests/diagnostics/catalog/sources/ir/IR0063.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0063
  = help: keep IR validation diagnostics structured and catalog-backed
